# sebulba

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements.txt  setup.cfg
.github/workflows/: tests_and_linters.yaml
docker/: Dockerfile  environment.yaml
experiments/: sebulba_ppo_atari.py
experiments/config/: base.yaml  queue.yaml
experiments/config/accelerators/: gpu_4_a100.yaml  local_1_device.yaml  local_8_device.yaml  tpu_v2.yaml  tpu_v3.yaml  tpu_v4.yaml
experiments/config/agents/: ppo.yaml
experiments/config/experiment/: ppo-breakout.yaml  ppo-pong.yaml  tpu-v4-max-convergence.yaml  tpu-v4-max-fps.yaml
experiments/config/loggers/: neptune.yaml  tensorboard.yaml
sebulba/: __init__.py  actor.py  config.py  core.py  learner.py  saver.py  stoppers.py  types.py  utils.py
sebulba/agents/: networks.py  ppo.py
sebulba/logging/: __init__.py  core.py  neptune.py  tensorboard.py
